--- a/tooling/gen/Cargo.toml
+++ b/tooling/gen/Cargo.toml
@@ -3,6 +3,8 @@ name = "gen"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "gen"
+path = "src/gen.rs"
 
 [dependencies]
